# compas_fea2_abaqus

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conftest.py  index.html  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflows/: build.yml  release.yml
data/UserSubroutines/: CompressionOnlySpring.for
docs/: api.rst  conf.py  index.rst
docs/api/: compas_fea2_abaqus.rst
latest/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
latest/.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  license.doctree  tutorial.doctree
latest/.doctrees/api/: compas_fea2_abaqus.doctree
latest/api/: compas_fea2_abaqus.html
src/compas_fea2_abaqus/: __init__.py  registration.py
src/compas_fea2_abaqus/job/: __init__.py  input_file.py
src/compas_fea2_abaqus/model/: __init__.py  bcs.py  connectors.py  constraints.py  elements.py  fields.py  groups.py  ics.py  interactions.py  interfaces.py  model.py  nodes.py  parts.py  releases.py  sections.py
src/compas_fea2_abaqus/model/materials/: __init__.py  concrete.py  material.py  steel.py  timber.py
src/compas_fea2_abaqus/problem/: __init__.py  _outputs.py  amplitude.py  combinations.py  displacements.py  fields.py  loads.py  outputs.py  problem.py
src/compas_fea2_abaqus/problem/steps/: __init__.py  dynamic.py  (+4 more)
src/compas_fea2_abaqus/results/: __init__.py  fields.py  results.py  results_to_sql.py
